--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:tds": "tsc --emitDeclarationOnly -d",
     "clean": "rimraf types es lib",
     "prepare": "npm run build",
+    "example": "npx webpack-dev-server --open",
     "doc": "documentation --github --markdown-toc=false readme index.js -a public -s \"API\" && git add README.md",
     "version": "npm run doc && npm run changelog",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
@@ -70,16 +71,24 @@
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.2",
     "@types/jest": "^26.0.10",
+    "@types/webpack-env": "^1.15.2",
     "conventional-changelog-cli": "^2.1.0",
     "documentation": "^13.0.2",
+    "globby": "^11.0.1",
+    "html-webpack-plugin": "^4.4.1",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
     "npm-run-all": "^4.1.5",
+    "null-loader": "^4.0.0",
     "prettier": "^2.1.1",
     "pretty-quick": "^3.0.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.3.0",
-    "typescript": "^4.0.2"
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@moyuyc/visit-tree": "^2.1.1",
