--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
       "^.+\\.tsx?$": "ts-jest",
       "^.+\\.jsx?$": "babel-jest"
     },
+    "setupFilesAfterEnv": [
+      "./__tests__/setup.js"
+    ],
+    "preset": "jest-puppeteer",
     "moduleFileExtensions": [
       "ts",
       "tsx",
@@ -71,13 +75,16 @@
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.2",
     "@types/jest": "^26.0.10",
+    "@types/puppeteer": "^3.0.1",
     "@types/webpack-env": "^1.15.2",
     "conventional-changelog-cli": "^2.1.0",
     "documentation": "^13.0.2",
+    "expect-puppeteer": "^4.4.0",
     "globby": "^11.0.1",
     "html-webpack-plugin": "^4.4.1",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
+    "jest-puppeteer": "^4.4.0",
     "npm-run-all": "^4.1.5",
     "null-loader": "^4.0.0",
     "prettier": "^2.1.1",
