--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "outDir": "types"
   },
   "include": ["./src"],
-  "exclude": ["node_modules", "test", "__tests__"]
+  "exclude": ["node_modules", "test"]
 }
