--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "rimraf types es lib",
     "prepare": "npm run build",
     "example": "npx webpack-dev-server --open",
-    "doc": "documentation --github --markdown-toc=false readme index.js -a public -s \"API\" && git add README.md",
+    "doc": "documentation --document-exported=true readme es/index.js -a public -s \"API\" && git add README.md",
     "version": "npm run doc && npm run changelog",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
   },
