--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "husky": "^4.2.5",
     "jest": "^26.4.2",
     "jest-puppeteer": "^4.4.0",
+    "puppeteer": "^5.2.1",
     "npm-run-all": "^4.1.5",
     "null-loader": "^4.0.0",
     "prettier": "^2.1.1",
